--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			<div class="talk_bubble">
 				<img class="twitchlogo" src="twitch.png">
 				<h2 class="twitboy"><span class="txtoutline">‘트수’</span> 란?</h2>
-				<p class="lightp"><br>트위치의 ‘트’와 백수의 ‘수’를 합친 말로<br>트위치 시청자를 일컫는 단어이다.<br>온종일 개인방송만 시청하니 백수일 거란 생각에서(...)<br><br>
+				<p class="lightp">트위치의 ‘트’와 백수의 ‘수’를 합친 말로<br>트위치 시청자를 일컫는 단어이다.<br>온종일 개인방송만 시청하니 백수일 거란 생각에서(...)<br><br>
 					하지만 이름만 보고 판단하기엔 섣부르다.<br>
 					그동안 알고있었던 평범하고 개성없는 백수는 잊어라!<br><br>
 					이제 이 키트와 함께라면, 당신도 차원이 다른 고품격 트수가 될 수 있다.
