--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
 		<!--▼▼▼안락킷트▼▼▼-->
 		.kit1{height: 500px; text-align: center;}
 		.minititle{width: 180px; display: block; margin: auto;}
-		.title{width: 600px; display: block; margin:auto; object-fit: contain; margin-top: 15px; margin-bottom: 100px;}
-		.titlelong{width: 720px; display: block; margin:auto; object-fit: contain; margin-top: 15px; margin-bottom: 100px;}
+		.title{width: 600px; display: block; margin:auto; object-fit: contain; margin-top: 15px; padding-bottom: 100px;}
+		.titlelong{width: 720px; display: block; margin:auto; object-fit: contain; margin-top: 15px; padding-bottom: 100px;}
 		.kit1_main{width: 900px; height: 900px; display: block; margin: auto; background-image: url(kit1_main.png); background-size: contain; background-repeat: no-repeat; padding-top: 40px;}
+		.kit2_main{width: 900px; height: 900px; display: block; margin: auto; background-image: url(kit2_main.png); background-size: contain; background-repeat: no-repeat; padding-top: 40px;}
+		.kit3_main{width: 900px; height: 900px; display: block; margin: auto; background-image: url(kit3_main.png); background-size: contain; background-repeat: no-repeat; padding-top: 40px;}
 		.namba{text-align: center; font-family: GmarketSansLight; font-size: 0.8em; display:block; margin:auto; width:110px; color: white; background-color: #28641A; border-radius: 40px 40px 40px 40px; margin-top: 150px; margin-bottom: 15px;}
+		.kit2color{background-color: #f39229;}
+		.kit3color{background-color: #a82c2c;}
 		section h1{font-family: TmonMonsori; font-size: 2.3em;}
 		section h2{font-family: GmarketSansBold; font-size: 2.2em; line-height: 1.3em; padding-bottom: 20px;}
 		section h3{font-family: TmonMonsori; font-size: 3em;}
@@ -84,29 +88,43 @@
 		.twhite{color: white;}
 		.tbrown{color: #60544a;}
 		.bgbrown{background-color: #60544a;}
+		.minip{font-family: GmarketSansLight; font-size: 0.6em;}
+		.thinp{font-family: GmarketSansLight;font-size: 0.8em;}
 		.lightp{font-family: GmarketSansMedium;font-size: 0.8em;}
 		.Mediump{font-family: GmarketSansMedium;font-size: 1em;}
 		.Semiboldp{font-family: GmarketSansMedium; font-size: 1.2em; padding-top: 20px;}
 		.Boldp{font-family: GmarketSansBold; font-size: 1.1em;}
 		.Boldbigp{font-family: GmarketSansBold; font-size: 1.5em;}
+		.lv{font-family: GmarketSansMedium; font-size: 1.8em; padding-top:50px; padding-bottom: 15px; }
+		.footertitle{font-family:TmonMonsori; font-size: 2.2em; text-align: left;}
 		.leftalg{text-align: left; padding-left: 15px;}
 		.rightalg{text-align: right; padding-right: 15px;}
+		.halfline{width:100px; height:10px; display: block; margin: auto;}
 		._1line{width:100px; height:30px; display: block; margin: auto;}
 		.nuki{width: 550px; display: block; margin:auto; padding-bottom: 30px;}
 		.itemname{color: #fff; -webkit-text-stroke: 2px #000; text-shadow:  4px 4px 0 #28641A,  8px 8px 0 #174111; padding-bottom: 220px;}
+		.itemname2{color: #fff; -webkit-text-stroke: 2px #000; text-shadow:  4px 4px 0 #f39229,  8px 8px 0 #ae6b29; padding-bottom: 220px;}
+		.itemname3{color: #fff; -webkit-text-stroke: 2px #000; text-shadow:  4px 4px 0 #a82c2c,  8px 8px 0 #690a0a; padding-bottom: 220px;}
 		.txtblacksd_r{text-shadow:  4px 4px 0 #000;}
 		.txtblacksd_l{text-shadow:  -4px 4px 0 #000;}
 		._3flex{width: 80%; display: flex; margin: auto; justify-content: space-between; padding-bottom: 200px;}
 		._3fcompo{width: 80%; height: 80%; object-fit: contain; display: block; margin: auto; padding-bottom: 15px;}
 		._2flex{width: 80%; display: flex; margin: auto; justify-content: space-between; padding-bottom: 25px;}
 		._2fcompo{width: 350px; height: auto; object-fit: contain; display: block; margin: auto;}
+		.infoflex{width: 750px; display: flex; margin: auto; justify-content: space-between; padding-bottom: 25px;}
+		.infocompo_s{width: 35%; height: auto; object-fit: contain; display: block; margin: auto;}
+		.infocompo{width: 50%; height: auto; object-fit: contain; display: block; margin: auto; padding-left:50px;}
+		.infocompo_l{width: 70%; height: auto; object-fit: contain; display: block; margin: auto; padding-left: 20px;}
 		.gif{display: block; margin:auto; width: 70%;}
+		.sgif{display: block; margin:auto; width: 55%;}
 		.processnum{font-family: GmarketSansBold; font-size: 2.5em; line-height: 1.2em; padding-right: 10px;}
-		.process{font-family: GmarketSansMedium; font-size: 1.2em; text-align: center;}
+		.process{font-family: GmarketSansMedium; font-size: 1.2em; text-align: center; padding-bottom: 15px;}
 		<!--푸터-->
 		footer{padding-bottom: 100px;}
 		footer div{width:100%; background-color: #000;}
 		footer p{padding-top: 100px; padding-bottom: 100px; color: white; text-align: center; font-size: 0.8em;}
+		.totop{background-color: #4d3f34;border: none; font-family:GmarketSansLight; color: white;padding: 15px 30px;text-align: center;text-decoration: none;font-size: 16px;margin: 4px 2px;cursor: pointer; display: block; margin: auto;}
+		.info{display: block; margin: auto; width: 750px;}
 	</style>
 </head>
 <body>
@@ -296,26 +314,240 @@
 				</div>
 				<div class="blank"></div>
 				<div class="blank"></div>
+				<div class="blank"></div>
 			</div>
 		</div>
 	</section>
+
+
+
+
 	<section class="kit2" id="kit2">
 		<div class="row">
 			<img class="divider" src="divider3.png">
 			<img class="minititle" src="kit2_minititle.png">
 			<img class="title" src="kit2_title.png">
 		</div>
+		<div class="row">
+			<div class="kit2_main">
+				<h1 class="tcenter"><span class="framenum">=2=</span><br><품격>킷-트</h1>
+				<p class="law tcenter Mediump">“나 혼자 있을 때도 화려한 모임처럼.<br>당신은 이미 수많은 트수들과<br>랜선으로 함께하고 있다.”</p>
+				<p class="kitcost tcenter">3,940원</p>
+			</div>
+			<p class="namba kit2color">Item No.3</p>
+			<p class="tcenter Mediump">고단한 방콕 생활로 번뇌에 찬 트수의 마음을 다스리는 방법</p>
+			<div class="_1line"></div>
+			<h2 class="tcenter">담배 한 대...<br>인 줄 알았지?</h2>
+			<div class="_1line"></div>
+			<img class="nuki" src="item3_nuki.png">
+			<h3 class="itemname2 tcenter">“시가렛 요지 케이스”</h3>
+			<div class="bgbrown">
+				<div class="blank"></div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="perfect.png"></div>
+					<div class="_2fcompo"><div class="_1line"></div><h2 class="leftalg twhite txtblacksd_r">뚜껑만 닫아두면<br>완벽하기 그지없는<br>담배 싱크로율!</h2></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><h2 class="rightalg twhite txtblacksd_l"><div class="_1line"></div>주머니에 쏙 들어가는<br>콤팩-트한 사이즈로<br>최고의 휴대성!</h2></div>
+					<div class="_2fcompo"><img class="_2fcompo rightboxshd" src="compact.png"></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="6pcs.png"></div>
+					<div class="_2fcompo"><h2 class="leftalg twhite txtblacksd_r"><div class="_1line"></div>한 개비에 6개!<br>많지도 적지도 않은<br>최적의 용량!</h2></div>
+				</div>
+				<div class="blank"></div>
+			</div>
+			<div>
+				<div class="blank"></div>
+				<h4 class="tcenter">들이마시지 마세요,<br>잇몸과 위에 양보하세요</h4>
+				<div class="_1line"></div>
+				<p class="Semiboldp process tbrown">담배를 지지는 척, 안주를 찍어먹을 이쑤시개를 꺼내보자</p>
+				<img class="sgif" src="cigar_1.png">
+				<div class="_1line"></div>
+				<div class="_1line"></div>
+				<p class="Semiboldp process tbrown">건강을 해치는 니코틴 말고, 위트와 유머를 한스푼</p>
+				<img class="sgif" src="cigar_2.png">
+				<div class="blank"></div>
+				<div class="blank"></div>
+			</div>
+			<div class="blank"></div>
+
+			<p class="namba kit2color">Item No.4</p>
+			<p class="tcenter Mediump">당신의 방에 칙칙하고 우중충한 물건만 잔뜩이라면</p>
+			<div class="_1line"></div>
+			<h2 class="tcenter">영롱하게 빛나는<br>그릇(?) 하나 장만하세요</h2>
+			<div class="_1line"></div>
+			<img class="nuki" src="item4_nuki.png">
+			<h3 class="itemname2 tcenter">“글라-스 재떨이 그릇”</h3>
+			<div class="bgbrown">
+				<div class="blank"></div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="lightshadow.png"></div>
+					<div class="_2fcompo"><div class="_1line"></div><h2 class="leftalg twhite txtblacksd_r">빛과 유리무늬의<br>아름다운 그림자<br>하모니!</h2></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><h2 class="rightalg twhite txtblacksd_l"><div class="_1line"></div>요지케이스와<br>함께 연출하면<br>극강의 시너지!</h2></div>
+					<div class="_2fcompo"><img class="_2fcompo rightboxshd" src="withcigar.png"></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="drygrape.png"></div>
+					<div class="_2fcompo"><h2 class="leftalg twhite txtblacksd_r"><div class="_1line"></div>담뱃재 말고,<br>안주를 담는<br>예쁜 그릇으로!</h2></div>
+				</div>
+				<div class="blank"></div>
+			</div>
+			<div class="blank"></div>
+			<div class="blank"></div>
+				<h4 class="tcenter">당신이 시청하는 게임 속<br>혼자 멋진거 다하는 그 캐릭터처럼</h4>
+				<div class="_1line"></div>
+				<div class="_1line"></div>
+				<p class="Semiboldp process tbrown">레트로 인테리어 소품으로 방 한구석을 운치있게 꾸며보자</p>
+				<img class="gif" src="ashtray_1.png">
+				<div class="_1line"></div>
+				<div class="_1line"></div>
+				<p class="Semiboldp process tbrown">트위치 볼 때 빠질 수 없는 주전부리를 담아 품격있게 즐겨보자</p>
+				<img class="gif" src="ashtray_2.png">
+				<div class="blank"></div>
+				<div class="blank"></div>
+				<div class="blank"></div>
+			</div>
+		</div>
 	</section>
+
+
+
+
 	<section class="kit3" id="kit3">
 		<div class="row">
 			<img class="divider" src="divider4.png">
 			<img class="minititle" src="kit3_minititle.png">
 			<img class="titlelong" src="kit3_title.png">
 		</div>
+		<div class="row">
+			<div class="kit3_main">
+				<h1 class="tcenter"><span class="framenum">=3=</span><br><든든>킷-트</h1>
+				<p class="law tcenter Mediump">“독서는 마음의 양식, 트위치는 마음의 야식.<br>머리에 먹을 걸 줬으면,<br>배에도 음식을 채워주는 게 인지상정!”</p>
+				<p class="kitcost tcenter">4,990원</p>
+			</div>
+			<p class="namba kit3color">Item No.5</p>
+			<p class="tcenter Mediump">전기장판에 누운 듯한 감성이 충만해지는 마음, 아니 배를 느끼고 싶다면</p>
+			<div class="_1line"></div>
+			<h2 class="tcenter">마음이 절로 따뜻해지는<br>백수의 대명사</h2>
+			<div class="_1line"></div>
+			<img class="nuki" src="item5_nuki.png">
+			<h3 class="itemname3 tcenter">“양은냄비”</h3>
+			<div class="bgbrown">
+				<div class="blank"></div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="potset.png"></div>
+					<div class="_2fcompo"><div class="_1line"></div><h2 class="leftalg twhite txtblacksd_r">번쩍번쩍 빛나는<br>아름다운 골드 컬러!</h2></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><h2 class="rightalg twhite txtblacksd_l"><div class="_1line"></div>견고하면서도 가볍고,<br>깔끔하면서도 투박한<br>그 때 그 시절의 감성</h2></div>
+					<div class="_2fcompo"><img class="_2fcompo rightboxshd" src="pothandle.png"></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="potsize.png"></div>
+					<div class="_2fcompo"><h2 class="leftalg twhite txtblacksd_r"><div class="_1line"></div>라면 하나 끓이면<br> 딱 가득 찰 만한<br>1인분 전용 사이즈!</h2></div>
+				</div>
+				<div class="blank"></div>
+				<div class="blank"></div>
+			</div>
+			<div>
+				<div class="blank"></div>
+				<h4 class="tcenter">노오란 바디와 황혼빛이 자아내는<br>한 폭의 그림같은 혼밥상</h4>
+				<div class="_1line"></div>
+				<img class="gif" src="pot_1.png">
+				<div class="_1line"></div>
+				<img class="gif" src="pot_2.png">
+				<div class="_1line"></div>
+				<img class="gif" src="pot_3.png">
+				<div class="blank"></div>
+				<div class="blank"></div>
+			</div>
+			<div class="blank"></div>
+
+			<p class="namba kit3color">Item No.6</p>
+			<p class="tcenter Mediump">어두운 방구석, 나혼자 있는 시간이 점차 재미도없고 축 가라앉는다면</p>
+			<div class="_1line"></div>
+			<h2 class="tcenter">작은 잔 속 음료가 분산시키는<br>화려한 LED 라읻-트의 향연</h2>
+			<div class="_1line"></div>
+			<img class="nuki" src="item6_nuki.png">
+			<h3 class="itemname3 tcenter">“LED 소주잔”</h3>
+			<div class="bgbrown">
+				<div class="blank"></div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="cuppattern.png"></div>
+					<div class="_2fcompo"><div class="_1line"></div><h2 class="leftalg twhite txtblacksd_r">LED분산을 위한<br>바닥면 커팅패턴으로<br>한층 더 화려하게!</h2></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><h2 class="rightalg twhite txtblacksd_l"><div class="_1line"></div>컵 아래에 숨겨진<br>전원 버튼으로<br>깔끔한 외관 유지!</h2></div>
+					<div class="_2fcompo"><img class="_2fcompo rightboxshd" src="cupbutton.png"></div>
+				</div>
+				<div class="_2flex">
+					<div class="_2fcompo"><img class="_2fcompo leftboxshd" src="darkcup.png"></div>
+					<div class="_2fcompo"><h2 class="leftalg twhite txtblacksd_r"><div class="_1line"></div>화려한 LED칼라로<br>어두운 방구석에서<br>최고의 진가 발휘!</h2></div>
+				</div>
+				<div class="blank"></div>
+			</div>
+			<div class="blank"></div>
+			<div class="blank"></div>
+			<h2 class="tcenter">컵 하나에 3가지 칼라 조명을 동시에!</h2>
+			<div class="_1line"></div>
+			<img class="sgif" src="cupcolor.gif">
+			<div class="_1line"></div>
+			<p class="Semiboldp process tbrown">빨강 / 파랑 / 초록</p>
+			<div class="blank"></div>
+			<div class="bgbrown">
+				<div class="blank"></div>
+				<h4 class="tcenter">3가지 조명모드,<br>취향껏 전환하며 즐겨보자</h4>
+				<p class="lv tcenter twhite">1단</p>
+				<img class="gif" src="lv1.gif">
+				<p class="lv tcenter twhite">2단</p>
+				<img class="gif" src="lv2.gif">
+				<p class="lv tcenter twhite">3단</p>
+				<img class="gif" src="lv3.gif">
+				<div class="blank"></div>
+				<div class="blank"></div>
+				<div class="blank"></div>
+
+				<div class="info">
+				<p class="lv twhite">이용안내</p>
+				<div class="infoflex">
+					<div class="infocompo">
+						<p class="Semiboldp twhite">배송안내</p>
+						<div class="halfline"></div>
+						<p class="thinp twhite">택배사 - CJ대한통운<br>오후 12시 30분 이전 주문건 당일출고/이후 주문건 익일 배송<br>도서산간지역은 2~3일 추가 소요될 수 있습니다.<br><span class="minip">*배송 현황은 택배사 사이트에서 확인하실 수 있습니다.</span><br><br></p>
+					</div>
+					<div class="infocompo">
+						<p class="Semiboldp twhite">교환/반품이 어려운 경우</p>
+						<div class="halfline"></div>
+						<p class="thinp twhite">제품의 파손 및 오염 등 상품가치가 상실된 경우<br>상품의 구성품 및 부속물이 누락되어 반송된 경우<br>패키지의 밀봉씰 제거 후 단순 변심으로 인한 교환/반품<br>상품 수령 후 14일 이상 지난 경우<br><span class="minip">*피해에 대한 보다 자세 보상 및 문의사항은 당사 고객센터로 문의 주십시오.</span></p>
+					</div>
+				</div>
+				<div class="blank"></div>
+			</div>
+			<div class="row">
+				<div>
+				<a href="#" class="totop"> 맨 위로 </a>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<footer>
-		<div><p>©2020. Juna Won. All rights reserved.</p></div>
+		<div class="row">
+			<div class="infoflex">
+				<div class="infocompo_s">
+					<p class="footertitle twhite">트수나라</p>
+				</div>
+				<div class="infocompo_l">
+					<p class="thinp twhite leftalg">(주) 트수나라<br>대표   원준아<br>주소   서울특별시 노원구 공릉동 aa-22<br>©2020. Juna Won. All rights reserved.</p>
+				</div>
+				<div class="infocompo">
+					<p class="thinp twhite leftalg">고객센터 및 제휴문의<br>010-9777-2333<br>평일(월-금) AM10:00~PM7:00<br>주말/공휴일 휴무</p>
+				</div>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
