--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>트수의 완성</title>
+	<meta name="description" content="트위치 백수 '트수'를 위한, 트위치/유튜브 시청을 한층 더 즐겁게 만들어줄 방구석 추천 아이템 키트 판매 가상 사이트">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://ispaaa1.github.io/UXadvanced_project2/">
+	<meta property="og:image" content="thumbnail.jpg">
+	<meta property="og:title" content="트수의 완성">
+	<meta property="og:description" content="트위치 백수 '트수'를 위한, 트위치/유튜브 시청을 한층 더 즐겁게 만들어줄 방구석 추천 아이템 키트 판매 가상 사이트">
 	<style type="text/css">
 		html{scroll-behavior: smooth;}
 		@font-face {
