--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta property="og:url" content="https://ispaaa1.github.io/UXadvanced_project2/">
 	<meta property="og:image" content="thumbnail.jpg">
 	<meta property="og:title" content="트수의 완성">
-	<meta property="og:description" content=""그동안 알고있었던 평범하고 개성없는 백수는 잊어라, 이 키트와 함께라면 당신도 차원이 다른 고품격 트수가 될 수 있다!
+	<meta property="og:description" content="그동안 알고있었던 평범하고 개성없는 백수는 잊어라, 이 키트와 함께라면 당신도 차원이 다른 고품격 트수가 될 수 있다!
 		 트위치 백수 '트수'를 위한- 트위치 시청을 한층 더 품격있게 만들어줄 아이템 판매 컨셉 사이트">
 	<style type="text/css">
 		html{scroll-behavior: smooth;}
